--- a/_includes/article-content.html
+++ b/_includes/article-content.html
@@ -6,7 +6,7 @@
     <div class="article__wrapper">
 
         {% if post.image %}
-          <a href="{{post.url | prepend: site.baseurl}}" class="article__image" style="background-image: url(images/{{post.image}})">
+          <a href="{{post.url}}" class="article__image" style="background-image: url(images/{{post.image}})">
           </a>
         {% else %}
           {% assign without-image = 'article-without-image' %}
@@ -25,7 +25,7 @@
           </div>
       
           <h2 class="article__title">
-            <a href="{{ post.url | prepend: site.baseurl }}">{{post.title}}</a>
+            <a href="{{ post.url }}">{{post.title}}</a>
           </h2>
       
           <p class="article__excerpt">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | truncate: 185 }}{% endif %}</p>
@@ -35,7 +35,7 @@
               <span class="article__date"><time datetime="{{ post.date | date_to_xmlschema }}">{% assign date_format = site.minima.date_format | default: "%B %-d, %Y" %}{{ post.date | date: date_format }}</time></span>
             </div>
 
-            <a href="{{post.url | prepend: site.baseurl}}" class="read-more">Keep Reading <i class="ion ion-ios-arrow-forward"></i></a>
+            <a href="{{post.url}}" class="read-more">Keep Reading <i class="ion ion-ios-arrow-forward"></i></a>
           </div>
 
         </div>
